--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Gigi Chan</h1>
-									<p>Senior Astral Projectionist</p>
+									<p>UCC 1c student</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
