--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gigi's Website!</title>
+		<title>gigi'swebsite</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,9 +22,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#" class="icon fa-twitter"><span>Twitter</span></a>
+						<a href="#work" class="icon hand"><span></span></a>
+						<a href="#contact" class="icon bird"><span>Contact</span></a>
+						<a href="https://zh-hk.facebook.com/" class="icon fa-facebook-official"><span>facebook</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -34,46 +34,45 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Gigi Chan</h1>
-									<p>UCC 1c student</p>
+									<p>I am a happy girl.</p>
+
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="http://s30.postimg.org/6c48zl10v/unspecified.jpg" alt="" />
 								</a>
 							</article>
 
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>friends</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									I meet my friends in my school.They are friendly and funny.
 								</p>
 								<section>
 									<div class="row">
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href='http://postimg.org/image/e86oa03ht/' target='_blank'><img src='http://s8.postimg.org/e86oa03ht/unspecified.jpg' border='0' alt="unspecified" width="200" height="200"/></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="#" class="image fit"><a href='http://postimg.org/image/ppruoh701/' target='_blank'><img src='http://s16.postimg.org/ppruoh701/unspecified.jpg' border='0' alt="unspecified" width="200" height="200"/></a></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="http://s12.postimg.org/t9tqa575n/unspecified.jpg" alt=""width="200" height="200"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="http://s22.postimg.org/a5oxj7ccv/unspecified.jpg" alt=""width="200" height="200"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="http://s13.postimg.org/p5bmm6v0l/unspecified.jpg" alt=""width="100" height="400"></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="http://s14.postimg.org/ftjgqe2en/unspecified.jpg" alt=""width="200" height="200"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="http://s29.postimg.org/o5zpdfur9/11205601_196600577343249_2038105227750512112_n.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
@@ -98,6 +97,7 @@
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
+									<p>hello </p>
 								</header>
 								<form action="#" method="post">
 									<div>
