--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<header>
 									<h1>Gigi Chan</h1>
 									<p>I am a happy girl.</p>
+									<p><a href="http://gigichan7025.github.io/thehappyjump" target"_blank">Play My Game</a></p>
 
 								</header>
 								<a href="#work" class="jumplink pic">
