--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Gigi Chan</h1>
-									<p>I am a happy girl.</p>
-									<p><a href="http://gigichan7025.github.io/thehappyjump" target"_blank">Play My Game</a></p>
+									<p>I am a happy girl. <a href="http://gigichan7025.github.io/thehappyjump" target"_blank">Play My Game</a></p>
 
 								</header>
 								<a href="#work" class="jumplink pic">
