--- a/index.html
+++ b/index.html
@@ -53,41 +53,42 @@
 								</p>
 								<section>
 									<div class="row">
-										<div class="4u 12u$(mobile)">
-											<a href='http://postimg.org/image/e86oa03ht/' target='_blank'><img src='http://s8.postimg.org/e86oa03ht/unspecified.jpg' border='0' alt="unspecified" width="200" height="200"/></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><a href='http://postimg.org/image/ppruoh701/' target='_blank'><img src='http://s16.postimg.org/ppruoh701/unspecified.jpg' border='0' alt="unspecified" width="200" height="200"/></a></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="http://s12.postimg.org/t9tqa575n/unspecified.jpg" alt=""width="200" height="200"></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>										
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="http://s22.postimg.org/a5oxj7ccv/unspecified.jpg" alt=""width="200" height="200"></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="http://s13.postimg.org/p5bmm6v0l/unspecified.jpg" alt=""width="100" height="400"></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="http://s14.postimg.org/ftjgqe2en/unspecified.jpg" alt=""width="200" height="200"></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="http://s29.postimg.org/o5zpdfur9/11205601_196600577343249_2038105227750512112_n.jpg" alt=""width="200" height="300"></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
+										<</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""width="200" height="300"></a>
 										</div>
 									</div>
 								</section>
